New interface logic, ssd drive killer fixed.